# varna-ewasm

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
app/: CompiledWasm.wasm  aaa.c  abc.rs  chiseledWasmFile.wasm  clang.wasm  config.js  gcWasm.wasm  gcWasm_ewasmified.wasm  in.wasm  main.c  wasmDisFile.wat
app/src/: build.js  common.js  handleRequest.js  rustc.js
